# Algorithms

./: .gitignore  CMakeLists.txt  README.md  addgraphedgedialog.cpp  addgraphedgedialog.h  algorithmbenchmarkresultwindow.cpp  algorithmbenchmarkresultwindow.h  algorithmbenchmarkresultwindow.ui  algorithmsmainwindow.cpp  algorithmsmainwindow.h  algorithmsmainwindow.ui  data_structure_visual_builder.cpp  data_structure_visual_builder.h  edgelist.cpp  edgelist.h  graph.h  graphalgorithms.cpp  graphalgorithms.h  graphwidget.cpp  graphwidget.h  graphwidget.ui  hardrunresultchartwindow.cpp  hardrunresultchartwindow.h  hardrunresultchartwindow.ui  icons.qrc  main.cpp
core/: algorithm.cpp  algorithm.h  algorithm_texts.h  algorithm_visualizer.cpp  algorithm_visualizer.h  benchmark_timers.cpp  benchmark_timers.h  data_structure.cpp  data_structure.h  data_structure_builder.cpp  data_structure_builder.h  data_structure_visual_builder.cpp  data_structure_visual_builder.h  property_editor_factory.cpp  property_editor_factory.h  property_layout_factory.cpp  property_layout_factory.h  utils.h
core/widgets/: data_structure_widget.cpp  data_structure_widget.h  properties_dialog.cpp  properties_dialog.h
graphs/: edge_list.cpp  edge_list.h  general_graph_builder.cpp  general_graph_builder.h  graph.cpp  graph.h  graph_algorithm_visualizers.cpp  graph_algorithm_visualizers.h  graph_algorithms.cpp  graph_algorithms.h  graph_builders.cpp  graph_builders.h  graph_texts.h  graph_visual_builders.cpp  graph_visual_builders.h  graph_visualization_settings.cpp  graph_visualization_settings.h
graphs/widgets/: add_edge_dialog.cpp  add_edge_dialog.h  add_graph_edge_dialog.cpp  add_graph_edge_dialog.h  graph_widget.cpp  graph_widget.h  random_graph_properties_dialog.cpp  random_graph_properties_dialog.h  remove_edge_dialog.cpp  remove_edge_dialog.h
widgets/: algorithm_benchmark_window.cpp  algorithm_benchmark_window.h  algorithm_visualization_window.cpp  algorithm_visualization_window.h  main_window.cpp  main_window.h
